// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Hamburger.js should match Arm Snapshot when Closed 1`] = `
<span
  className="jsx-3274965410 jsx-3124052305"
/>
`;

exports[`components/Hamburger.js should match Arm Snapshot when Open 1`] = `
<span
  className="jsx-3274965410 jsx-985345683"
/>
`;

exports[`components/Hamburger.js should match Hamburger Snapshot when Menu is Open 1`] = `
<div
  className="jsx-4157279021 container"
  onClick={[Function]}
>
  <div
    className="jsx-4157279021 layers"
  >
    <span
      className="jsx-2767301838"
    />
    <span
      className="jsx-946195675"
    />
    <span
      className="jsx-1187536323"
    />
  </div>
  <div
    className="jsx-4157279021 arms"
  >
    <span
      className="jsx-3274965410 jsx-985345683"
    />
    <span
      className="jsx-3274965410 jsx-3918374579"
    />
  </div>
</div>
`;

exports[`components/Hamburger.js should match Hamburger Snapshot when Search is Open 1`] = `
<div
  className="jsx-4157279021 container"
  onClick={[Function]}
>
  <div
    className="jsx-4157279021 layers"
  >
    <span
      className="jsx-2767301838"
    />
    <span
      className="jsx-946195675"
    />
    <span
      className="jsx-1187536323"
    />
  </div>
  <div
    className="jsx-4157279021 arms"
  >
    <span
      className="jsx-3274965410 jsx-985345683"
    />
    <span
      className="jsx-3274965410 jsx-3918374579"
    />
  </div>
</div>
`;

exports[`components/Hamburger.js should match Hamburger Snapshot when close 1`] = `
<div
  className="jsx-4157279021 container"
  onClick={[Function]}
>
  <div
    className="jsx-4157279021 layers"
  >
    <span
      className="jsx-1616547687"
    />
    <span
      className="jsx-2337808643"
    />
    <span
      className="jsx-1707466055"
    />
  </div>
  <div
    className="jsx-4157279021 arms"
  >
    <span
      className="jsx-3274965410 jsx-3124052305"
    />
    <span
      className="jsx-3274965410 jsx-3922865976"
    />
  </div>
</div>
`;

exports[`components/Hamburger.js should match Layer Snapshot when Closed 1`] = `
<span
  className="jsx-1616547687"
/>
`;

exports[`components/Hamburger.js should match Layer Snapshot when Open 1`] = `
<span
  className="jsx-2767301838"
/>
`;
